--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -16,8 +16,10 @@
                     <i class="trash outline icon"></i>
                 </a>
             {{else if isClean}}
+			
                 <a class="ui green right corner label">
                     <i class="white check icon"></i>
+				
                 </a>
             {{else if isReserved}}
                 <a class="ui gray right corner label">
@@ -29,14 +31,24 @@
                     <i class="notched circle loading icon"></i>
                 </a>
             {{/if}}
-            <div class="tableNum"><i class="users icon"> {{occupants}}/{{size}}</i>Table {{table_id}}</div>
-            {{#if isReserved}}
-                <h3> Reserved for name: {{reservation.firstName}}</h3>{{reservation.Date}}
-                Table Type {{table_type}}<br>
-                {{else}}
-                <br>
+            <div class="tableNum"><i class="users icon"> {{occupants}}/{{size}}</i>Table {{table_id}}
+			<div class="grey statistic" id ="counter">
 
-                Table Type {{table_type}}<br>
+                            {{#if isClean}}
+                            <i class="big disabled minus icon link" id = "minus"></i>
+                            <i class="big plus icon link" id="plus"></i>
+                            <br>
+                            <div class="value" id="counts" style="color:white;">
+                                {{occupants}}
+                            </div>
+							{{/if}}
+
+                        </div>
+			</div>
+
+            {{#if isReserved}}
+                <h3> Reserved for name: {{reservation.firstName}}</h3> <p id="dateDisplay">{{restime}}</p>
+               
                 <!--             Reservation Interval {{reservation_intv}}<br>
                  -->
                 <!--<button class="ui teal button">Taken</button>-->
