--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -52,7 +52,7 @@
 			</div>
 
             {{#if isReserved}}
-	    <h3> Reserved for name: {{reservation.firstName}}</h3> <p id="{{table_id}}dateDisplay">{{restime}}</p>
+	    <h3> Reserved for: {{reservation.firstName}}</h3> <p id="{{table_id}}dateDisplay">{{restime}}</p>
                
                 <!--             Reservation Interval {{reservation_intv}}<br>
                  -->
