added client and integration tests

--- a/app/client/reservation/reservation.html
+++ b/app/client/reservation/reservation.html
@@ -15,7 +15,7 @@
         <div class="eight wide column">
             <div class="ui fluid centered card">
                 <div class="content">
-                    <form class="ui form">
+                    <form class="ui form" id="reserve_form">
                         <h2 class="ui dividing header">Reserve a Table</h2>
                         <div class="field">
                             <label>Name</label>
@@ -64,7 +64,7 @@
                                             <span class="input-group-addon">
                                                 <span class="glyphicon glyphicon-calendar"></span>
                                             </span>
-                                            <input type='text' id ="date-time" class="form-control fluid field">
+                                            <input type='text' id ="date-time" name="reservation[date]" class="form-control fluid field">
 
                                         </div>
                                     </div>
