--- a/app/client/inventory/inventory.html
+++ b/app/client/inventory/inventory.html
@@ -1,3 +1,116 @@
 <template name="inventoryPage">
+    <div class="container" ng-controller="index">
 
+        <div class="box margin-right" id="shopping-list">
+            <h1>My Shopping List</h1>
+
+           <!-- <div id="errorMessage"><i class="icon-cross"></i>Please enter all inputs!</div>
+
+            <div id="successMessage"><i class="icon-checkmark"></i>Item added to shopping list!</div>
+
+            <div class="half margin-right">
+                <input type='text'   class="searchButton" placeholder='Item Name' ng-model="itemName" autofocus required>
+            </div><div class="half"><input type='text'   class="searchButton" placeholder='Shop Name' ng-model="itemShop" required></div>
+            <div class="half margin-right">
+                <input type='number' class="searchButton margin-right" placeholder='Quantity' ng-model="itemQuantity" required>
+            </div><div class="dollar half">
+            <span>$</span>
+            <input type='number' class="searchButton" placeholder='Price (each)' ng-model="itemPrice" required>
+        </div>
+
+            <button id="addItem" ng-click="addItem()">Add Item</button>
+-->
+            <div class="list">
+                <table border="0" cellspacing="0" id="shoppingTbl">
+                    <tr class="table-header">
+                        <td></td>
+                        <td>Name</td>
+                        <td class="center">Quantity</td>
+                        <td class="center">Price</td>
+                    </tr>
+
+                </table>
+                <div class="cost cf">
+                    <span class="left">Total Cost:</span>
+                    <span class="right" id="totalCost">$ 0.00</span>
+                </div>
+                <button class="clear" >Clear Shopping List</button>
+            </div>
+        </div>
+
+        <div class="box" id="inventory">
+            <h1 id="inventoryH1">
+                Inventory
+                <span class="tooltipSpan" data-inverted="" data-tooltip="Add new" data-position="bottom center">
+                    <i class="plus icon link" id="inventoryPlus"></i>
+                </span>
+            </h1>
+            <table border="0" cellspacing="0">
+                <tr class="table-header">
+                    <td>Name</td>
+                    <td class="center">&nbsp;</td>
+                    <td class="center">&nbsp;</td>
+                    <td class="center">&nbsp;</td>
+                    <td class="right">Quantity</td>
+                    <td class="right">Price</td>
+                    <td class="center">Buy More</td>
+                </tr>
+            </table>
+            <div class="list" id="inventoryList">
+                <table border="0" cellspacing="0">
+                    <!--<div ng-hide="inventory.length" class="center">Your inventory is empty.</div>-->
+                    {{#each ingredients}}
+                        {{> ingredientRow}}
+                    {{/each}}
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="ui modal" id="addIngredientModal">
+        <i class="close icon"></i>
+        <div class="header">
+            Add New Item to Inventory
+        </div>
+        <div class="content">
+            <div class="ui form" id="inventoryForm">
+                <div class="field">
+                    <label>Item Name</label>
+                    <input type="text" placeholder="Name">
+                </div>
+                <div class="field">
+                    <label>Quantity</label>
+                    <input type="text" placeholder="Quantity">
+                </div>
+
+
+                <div class="field">
+                    <label>Price per Unit</label>
+                    <input type="text" placeholder="Price per Unit (ex: $5 per lb)">
+                </div>
+                <div class="field">
+                    <label>Units</label>
+                    <input type="text" placeholder="Units (ex: lbs, cups, oz">
+                </div>
+            </div>
+
+                <button class="ui red right floated button"> Cancel </button>
+                <button class="ui green right floated button"> Add Item</button>
+            <br>
+            <br>
+        </div>
+
+    </div>
+    <script>
+        var html = document.getElementById("shoppingTbl").innerHTML;
+        var totalCost = document.getElementById("totalCost").innerHTML;
+    </script>
+</template>
+<template name="ingredientRow">
+    <tr>
+        <td>{{itemName}}</td>
+        <td class="center">Quantity</td>
+        <!-- add quantity & units here -->
+        <td class="center">$ {{itemPrice}}</td>
+        <td><button class="ui green button" id="buyMore">Buy</button></td>
+    </tr>
 </template>
