--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -11,12 +11,10 @@
 			<div class="three wide column">
 				Item
 			</div>
-			<div class="two wide column">
+			<div class="three wide column">
 				Type
 			</div>
-			<div class="one wide column">
-				Qty
-			</div>
+
 			<div class="two wide column">
 				Cook Time
 			</div>
@@ -46,13 +44,10 @@
     <div class = "three wide column">
       {{itemName}}
     </div>
-    <div class = "two wide column">
+    <div class = "three wide column">
       {{mealType}}
     </div>
-    <div class = "one wide column">
-      1
-    </div>
-    <div class="two wide column" id="time">
+      <div class="two wide column" id="time">
       {{cookTime}}:00
     </div>
     <div class="four wide column" id = "scrollfeature">
