--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -50,7 +50,7 @@
       {{mealType}}
     </div>
     <div class = "one wide column">
-      1
+      {{priorityVal}}
     </div>
     <div class="two wide column" id="time">
       {{cookTime}}:00
