--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -11,10 +11,12 @@
 			<div class="three wide column">
 				Item
 			</div>
-			<div class="three wide column">
+			<div class="two wide column">
 				Type
 			</div>
-
+			<div class="one wide column">
+				Prty
+			</div>
 			<div class="two wide column">
 				Cook Time
 			</div>
@@ -44,7 +46,7 @@
     <div class = "three wide column">
       {{itemName}}
     </div>
-    <div class = "three wide column">
+    <div class = "two wide column">
       {{mealType}}
     </div>
     <div class = "one wide column">
