changed prty title

--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -14,13 +14,13 @@
 			<div class="two wide column">
 				Type
 			</div>
-			<div class="one wide column">
-				Prty
+			<div class="two wide column">
+				Priority
 			</div>
 			<div class="two wide column">
 				Cook Time
 			</div>
-			<div class="four wide column">
+			<div class="three wide column">
 				Special Requests
 			</div>
 
@@ -49,13 +49,13 @@
     <div class = "two wide column">
       {{mealType}}
     </div>
-    <div class = "one wide column">
+    <div class = "two wide column">
       {{priorityVal}}
     </div>
     <div class="two wide column" id="time">
       {{cookTime}}:00
     </div>
-    <div class="four wide column" id = "scrollfeature">
+    <div class="three wide column" id = "scrollfeature">
       {{specialRequests}}
     </div>
     <div class="two wide column">
