functional order queue timer update

--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -53,7 +53,7 @@
       {{priorityVal}}
     </div>
     <div class="two wide column" id="time">
-      {{cookTime}}:00
+      {{cookTimeStr}}
     </div>
     <div class="three wide column" id = "scrollfeature">
       {{specialRequests}}
