--- a/app/client/stat/stat.html
+++ b/app/client/stat/stat.html
@@ -3,5 +3,10 @@
     <div class="item"><span class="large text">Statistics</span></div>
     {{{menuItems}}}
   </div>
-  <div class="chart"></div>
+  <section class="mainContent">
+    <h1>Restaurant</h1>
+    <div class="chartContainer">
+      <div class="chart"></div>
+    </div>
+  </section>
 </template>
