fixed email format

--- a/app/private/reservation-email.html
+++ b/app/private/reservation-email.html
@@ -14,7 +14,7 @@
                 <h1 >Hello {{name}}
                 </h1>
                 <h3>
-                    Your Reservation for {{seats}} has been confirmed at {{date}}. We look forward to serving you
+                    Your Reservation for {{seats}} has been confirmed on {{date}} at {{time}}.<br>We look forward to serving you
                 </h3>
             </div>
             <br><br><br><br><br><br><br><br><br><br><br><br>
