--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -1,6 +1,6 @@
 <template name="floorplan">
-
-    <div class="ui four column grid" id="fourColumnGrid">
+    <button id="merge_button" class="ui primary button" clicked="false"> Manual Merge</button>
+     <div class="ui four column grid" id="fourColumnGrid">
         {{#each tables}}
             {{>table}}
         {{/each}}
@@ -9,10 +9,13 @@
 </template>
 
 <template name="table" >
-{{#if notMerged}}
+{{#if notMergeComponent}}
     <div class="column" >
 
-		<div class="ui raised inverted segment" style="color:white">
+	    <div class="ui raised inverted segment" id={{table_id}} style="color:white">
+	    {{#if isMergedTable}}
+	    <div class = "ui small red bottom left  attached label">Unmerge</div>  
+	    {{/if}}
             {{#if isDirty}}
                 <a class="ui red right corner label">
                     <i class="trash outline icon"></i>
