Decentralized data modules. Added muliple item viewer

--- a/app/client/stat/stat.html
+++ b/app/client/stat/stat.html
@@ -4,9 +4,6 @@
     {{{menuItems}}}
   </div>
   <section class="mainContent">
-    <h1>Restaurant</h1>
-    <div class="chartContainer">
-      <div class="chart"></div>
-    </div>
+    {{>kitchen}}
   </section>
 </template>
