--- a/app/client/stat/kitchen.html
+++ b/app/client/stat/kitchen.html
@@ -1,9 +1,16 @@
 <template name="kitchen">
-  <h1>Cook Time of An Item</h1>
+  <h1>Cook Time of an Item</h1>
   <select id="cookTimeItems" class="ui dropdown">
     {{{listMenuItems}}}
   </select>
   <div class="chartContainer">
     <div id="cookTimeGraph"></div>
+  </div>
+  <h1>Usage of an Ingredient</h1>
+  <select id="ingredients" class="ui dropdown">
+    {{{listIngredients}}}
+  </select>
+  <div class="chartContainer">
+    <div id="ingUsageGraph"></div>
   </div>
 </template>
