number of orders stat added

--- a/app/client/stat/kitchen.html
+++ b/app/client/stat/kitchen.html
@@ -13,4 +13,9 @@
   <div class="chartContainer">
     <div id="ingUsageGraph"></div>
   </div>
+  <h1>Number of Orders</h1>
+  {{createNumOrdersGraph}}
+  <div class="chartContainer">
+    <div id="numOrdersGraph"></div>
+  </div>
 </template>
