added time spent by customer stat

--- a/app/client/stat/stat.html
+++ b/app/client/stat/stat.html
@@ -4,6 +4,7 @@
     {{{menuItems}}}
   </div>
   <section class="mainContent">
-    {{>kitchen}}
+    <!--{{>kitchen}}-->
+    {{>general}}
   </section>
 </template>
