added popular items pie charts and ability to switch between pages

--- a/app/client/stat/general.html
+++ b/app/client/stat/general.html
@@ -4,4 +4,13 @@
   <div class="chartContainer">
     <div id="timeSpentGraph"></div>
   </div>
+  {{createPopItemsCharts}}
+  <h1>Popular Refreshments</h1>
+  <div id="refreshmentPieChart"></div>
+  <h1>Popular Appetizers</h1>
+  <div id="appetizerPieChart"></div>
+  <h1>Popular Entrees</h1>
+  <div id="entreePieChart"></div>
+  <h1>Popular Desserts</h1>
+  <div id="dessertPieChart"></div>
 </template>
