--- a/app/client/stat/stat.html
+++ b/app/client/stat/stat.html
@@ -4,7 +4,11 @@
     {{{menuItems}}}
   </div>
   <section class="mainContent">
-    <!--{{>kitchen}}-->
-    {{>general}}
+    <div id="general">
+      {{>general}}
+    </div>
+    <div id="kitchen" style="display:none;">
+      {{>kitchen}}
+    </div>
   </section>
 </template>
