changed styles; changed it to manager from statistics; and removed busboy and created archive

--- a/app/client/stat/archive.html
+++ b/app/client/stat/archive.html
@@ -1,4 +1,4 @@
-<template name="billing">
+<template name="archive">
   <h1>View Past Transactions</h1>
   <!--<input type="text" class="form-control" id="my-datepicker">-->
   <div id="sandbox-container">
