--- a/app/client/stat/stat.html
+++ b/app/client/stat/stat.html
@@ -13,5 +13,8 @@
     <div id="archive" style="display:none;">
       {{>archive}}
     </div>
+    <div id="reservations" style="display:none;">
+      {{>reservations}}
+    </div>
   </section>
 </template>
