--- a/app/client/floorPlan/floorplan.html
+++ b/app/client/floorPlan/floorplan.html
@@ -39,7 +39,7 @@
 
             <div class="tableNum"><i class="users icon"> {{occupants}}/{{size}}</i><p class="tableID">Table {{table_id}}</p>
 			{{#if isTaken}}
-			<div><button class="ui yellow centered button">Print Bill</button></div>
+			<div><button class="ui yellow centered button">Serving&nbsp;&nbsp;<i class="notched circle loading icon"></i></button></div>
 			{{/if}}
 			<div class="grey statistic" id ="counter">
 
