--- a/app/client/stat/archive.html
+++ b/app/client/stat/archive.html
@@ -1,9 +1,57 @@
 <template name="archive">
   <h1>View Past Transactions</h1>
-  <!--<input type="text" class="form-control" id="my-datepicker">-->
-  <div id="sandbox-container">
-    <div></div>
+  <div id="container">
+    <div id="sandbox-container">
+      <div></div>
+    </div>
+    <div id="viewBills">
+      <table class="ui celled striped table">
+    <thead>
+      <tr><th colspan="3">
+        <button class="ui icon button">
+          <i class="angle left icon"></i>
+        </button>
+        <span>1 of 3</span>
+        <button class="ui icon button">
+          <i class="angle right icon"></i>
+        </button>
+      </th>
+    </tr></thead>
+    <tbody>
+      <tr>
+        <td>Order ID:</td>
+        <td class="right aligned collapsing" id="order-id"></td>
+      </tr>
+      <tr>
+        <td>Time</td>
+        <td class="right aligned collapsing" id="time"></td>
+      </tr>
+      <tr>
+        <td>Items</td>
+      </tr>
+      <tr>
+        <td id="itemNames"></td>
+        <td class="right aligned collapsing" id="itemCosts"></td>
+      </tr>
+      <tr>
+        <td>Total</td>
+        <td class="right aligned collapsing" id="total"></td>
+      </tr>
+    </tbody>
+  </table>
+    </div>
   </div>
-  <div id="viewBills">
-  </div>
+  <style>
+    #container {
+      display: flex;
+    }
+
+    #container > div {
+      flex: 1;
+    }
+
+    td#itemCosts ul li {
+      list-style-type: none;
+    }
+  </style>
 </template>
