--- a/app/client/manager/manager.html
+++ b/app/client/manager/manager.html
@@ -14,12 +14,13 @@
     <section class="card-info card-section hideBlock" id = "itemToDisplay">
         <i class="ion-navicon menu"></i>
         <i class="ion-ios-search search"></i>
-
-        <h1 class="user-header">
+        <div class="itemNameDiv">
+        <h3 class="user-header">
         {{itemNAME}}
         <br>
         <br>
-        </h1>
+        </h3>
+        </div>
 
         <div class="dial">
             <h2 class="dial-value manager manager1">
