final commit; reservation to be done

--- a/app/client/stat/general.html
+++ b/app/client/stat/general.html
@@ -5,12 +5,13 @@
     <div id="timeSpentGraph"></div>
   </div>
   {{createPopItemsCharts}}
-  <h1>Popular Refreshments</h1>
+  <h1>Popular Items This Week</h1>
+  <h3>Refreshments</h3>
   <div id="refreshmentPieChart"></div>
-  <h1>Popular Appetizers</h1>
+  <h3>Appetizers</h3>
   <div id="appetizerPieChart"></div>
-  <h1>Popular Entrees</h1>
+  <h3>Entrees</h3>
   <div id="entreePieChart"></div>
-  <h1>Popular Desserts</h1>
+  <h3>Desserts</h3>
   <div id="dessertPieChart"></div>
 </template>
