--- a/app/client/stat/archive.html
+++ b/app/client/stat/archive.html
@@ -8,11 +8,11 @@
       <table class="ui celled striped table">
     <thead>
       <tr><th colspan="3">
-        <button class="ui icon button">
+        <button class="ui icon button" id="prev">
           <i class="angle left icon"></i>
         </button>
-        <span>1 of 3</span>
-        <button class="ui icon button">
+        <span><span id="index">0</span> of <span id="itemsLength">0</span></span>
+        <button class="ui icon button" id="next">
           <i class="angle right icon"></i>
         </button>
       </th>
