rank is words now

--- a/app/client/manager/manager.html
+++ b/app/client/manager/manager.html
@@ -1,4 +1,4 @@
-<template name="manager">
+<template name="menuSuggestions">
     <!--
     <h1> Manager Page, WIP</h1>
     <h2> Meal Suggester</h2>
@@ -23,13 +23,9 @@
         </div>
 
         <div class="dial">
-            <h2 class="dial-value manager manager1">
-                Rank
-            </h2>
-            <h3 class="dial-title manager manager1">
+            <h2 class="dial-value">
                 {{itemRANK}}
-            </h3>
-
+            </h2>
         </div>
 
         <section class="user managerRow" >
