--- a/app/client/order/order.html
+++ b/app/client/order/order.html
@@ -5,7 +5,7 @@
 
     <div class="ui internally celled center aligned grid">
 		<div class="grey rounded spaced row">
-			<div class="two wide column">
+			<div class="three wide column">
 				Order ID
 			</div>
 			<div class="three wide column">
@@ -15,16 +15,13 @@
 				Type
 			</div>
 			<div class="two wide column">
-				Priority
-			</div>
-			<div class="two wide column">
 				Cook Time
 			</div>
 			<div class="three wide column">
 				Special Requests
 			</div>
 
-            <div class="two wide column">
+            <div class="three wide column">
                 Actions
             </div>
 		</div>
@@ -40,7 +37,7 @@
 
 <template name = "orderRow">
   <div class = "white rounded row" id="tap">
-    <div class = "two wide column">
+    <div class = "three wide column">
       {{orderID}}
     </div>
     <div class = "three wide column">
@@ -49,16 +46,13 @@
     <div class = "two wide column">
       {{mealType}}
     </div>
-    <div class = "two wide column">
-      {{priorityVal}}
-    </div>
     <div class="two wide column" id="time">
       {{cookTimeStr}}
     </div>
     <div class="three wide column" id = "scrollfeature">
       {{specialRequests}}
     </div>
-    <div class="two wide column">
+    <div class="three wide column">
       <button class="ui medium icon primary button" id="done-btn">
         <i class="checkmark icon" id="done-btn-icon"></i>
       </button>
