commented code and descriptions

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <head>
   <title>iRestaurant</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
