--- a/app/client/Login/loginTemplate.html
+++ b/app/client/Login/loginTemplate.html
@@ -1,3 +1,5 @@
+<!--Authors: Raj Patel, Mit Patel, Dylan Herman, Moulindra Muchumari, Prabhjot Singh, Nill Patel-->
+<!--Project Website: https://github.com/Mitbits/Software-Project-->
 <template name="landingpage">
     <head>
         <!-- Latest compiled and minified CSS -->
